added first project

--- a/index.html
+++ b/index.html
@@ -13,26 +13,27 @@
   </head>
   <body>
     <!-- nav bar -->
-    <div>
-      <ul>
-        <li>
-          <a href="https://github.com/JustinRoesner" target="_blank">github</a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/in/justinroesner/" target="_blank"
-            >linkedin</a
-          >
-        </li>
-        <li>
-          <a href="#contact">contact</a>
-        </li>
-      </ul>
-    </div>
+    
 
     <!-- intro section -->
     <section>
       <h1>Justin Roesner</h1>
       <p class="subtitle"><strong>Front End Developer</strong></p>
+<div>
+      <ul class="nav-list">
+        <li>
+          <a href="https://github.com/JustinRoesner" target="_blank">GitHub</a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/justinroesner/" target="_blank"
+            >LinkedIn</a
+          >
+        </li>
+        <li>
+          <a href="#contact">Contact</a>
+        </li>
+      </ul>
+    </div>
     </section>
 
     <!-- about -->
@@ -46,7 +47,7 @@
         technology. My love for learning fulfills me and would make me a good
         member of any team.
       </p>
-      <button class="btn-shadow btn-cv">Download CV</button>
+      <button class="btn-shadow btn-cv">View CV</button>
     </section>
 
     <!-- skills -->
@@ -74,7 +75,16 @@
     <!-- personal projects -->
     <section>
       <h2>Projects</h2>
-      <div><p>project 1</p></div>
+      <div>
+        <h3>Fake Product Landing Page</h3>
+        <div>Technology used: </div>
+        <div>BootStrap, JS, CSS</div>
+        </br>
+        <div>
+          <a href="https://justinroesner.github.io/fake-product-site/" target="_blank">Live Link</a>
+          <a href="https://github.com/JustinRoesner/fake-product-site" target="_blank">GitHub Link</a>
+        </div>
+      </div>
       <div><p>project 2</p></div>
       <div><p>project 3</p></div>
     </section>
@@ -82,17 +92,22 @@
     <!-- contact me  -->
     <section class="section-contact-me">
       <h2 id="contact">Contact Me</h2>
+      <p>815-901-1989</p>
+      <p>JustinRoesner@gmail.com</p>
       <form
         action="https://formspree.io/f/mbjwvzpb"
         method="POST">
         <input class="" type="email" name="email" placeholder="your email">
+        </br>
         <textarea name="message" placeholder="your message"></textarea>
-    </br>
-        <input type="submit" class="btn-shadow btn-submit"></button>
+        </br>
+        <input type="submit" class="btn-shadow btn-submit" value="Submit"/>
       </form>
     </section>
+
     <footer>
       <p class="footer">July 2022, Justin Roesner</p>
     </footer>
+
   </body>
 </html>
