made site responsive

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section>
       <h1>Justin Roesner</h1>
       <p class="subtitle"><strong>Front End Developer</strong></p>
-<div>
+    <div>
       <ul class="nav-list">
         <li>
           <a href="https://github.com/JustinRoesner" target="_blank">GitHub</a>
@@ -75,18 +75,36 @@
     <!-- personal projects -->
     <section>
       <h2>Projects</h2>
-      <div>
-        <h3>Fake Product Landing Page</h3>
+      <div class="project">
+        <h3 class="project-name">Fake Product Landing Page</h3>
         <div>Technology used: </div>
-        <div>BootStrap, JS, CSS</div>
+        <div>CSS and Bootstrap library</div>
         </br>
         <div>
           <a href="https://justinroesner.github.io/fake-product-site/" target="_blank">Live Link</a>
           <a href="https://github.com/JustinRoesner/fake-product-site" target="_blank">GitHub Link</a>
         </div>
       </div>
-      <div><p>project 2</p></div>
-      <div><p>project 3</p></div>
+      <div class="project">
+        <h3 class="project-name">React Timer</h3>
+        <div>Technology used: </div>
+        <div>CSS and Bootstrap library</div>
+        </br>
+        <div>
+          <a href="https://justinroesner.github.io/fake-product-site/" target="_blank">Live Link</a>
+          <a href="https://github.com/JustinRoesner/fake-product-site" target="_blank">GitHub Link</a>
+        </div>
+      </div>
+      <div class="project">
+        <h3 class="project-name">React Mining Game</h3>
+        <div>Technology used: </div>
+        <div>CSS and Bootstrap library</div>
+        </br>
+        <div>
+          <a href="https://justinroesner.github.io/fake-product-site/" target="_blank">Live Link</a>
+          <a href="https://github.com/JustinRoesner/fake-product-site" target="_blank">GitHub Link</a>
+        </div>
+      </div>
     </section>
 
     <!-- contact me  -->
