added second project

--- a/index.html
+++ b/index.html
@@ -12,22 +12,20 @@
     />
   </head>
   <body>
-    <!-- nav bar -->
-    
-
     <!-- intro section -->
     <section>
       <h1>Justin Roesner</h1>
       <p class="subtitle"><strong>Front End Developer</strong></p>
     <div>
+    <!-- nav bar -->
       <ul class="nav-list">
         <li>
           <a href="https://github.com/JustinRoesner" target="_blank">GitHub</a>
         </li>
         <li>
-          <a href="https://www.linkedin.com/in/justinroesner/" target="_blank"
-            >LinkedIn</a
-          >
+          <a href="https://www.linkedin.com/in/justinroesner/" target="_blank">
+            LinkedIn
+          </a>
         </li>
         <li>
           <a href="#contact">Contact</a>
@@ -75,6 +73,18 @@
     <!-- personal projects -->
     <section>
       <h2>Projects</h2>
+      <!-- project 1 -->
+      <div class="project">
+        <h3 class="project-name">React Timer</h3>
+        <div>Technology used: </div>
+        <div>React</div>
+        </br>
+        <div>
+          <a href="http://eqtimer.hugesalt.com/" target="_blank">Live Link</a>
+          <a href="https://github.com/JustinRoesner/eq_timer/tree/master/eq_timer" target="_blank">GitHub Link</a>
+        </div>
+      </div>
+      <!-- project 2 -->
       <div class="project">
         <h3 class="project-name">Fake Product Landing Page</h3>
         <div>Technology used: </div>
@@ -85,16 +95,7 @@
           <a href="https://github.com/JustinRoesner/fake-product-site" target="_blank">GitHub Link</a>
         </div>
       </div>
-      <div class="project">
-        <h3 class="project-name">React Timer</h3>
-        <div>Technology used: </div>
-        <div>CSS and Bootstrap library</div>
-        </br>
-        <div>
-          <a href="https://justinroesner.github.io/fake-product-site/" target="_blank">Live Link</a>
-          <a href="https://github.com/JustinRoesner/fake-product-site" target="_blank">GitHub Link</a>
-        </div>
-      </div>
+      <!-- project 3 -->
       <div class="project">
         <h3 class="project-name">React Mining Game</h3>
         <div>Technology used: </div>
