changed style of projects

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <!-- skills -->
     <section>
-      <h2>Skills</h2>
+      <h2 class="skill-section-header">Skills</h2>
       <div class="skill-box">
         <img src="./images/skill-js.webp" alt="JavaScript logo" class="skill" id="first-skill" />
         <img src="./images/skill-html.png" alt="HTML logo" class="skill" />
@@ -76,43 +76,44 @@
       <!-- project 1 -->
       <div class="project">
         <h3 class="project-name">React Timer</h3>
-        <div>Technology used: </div>
-        <div>React</div>
-        </br>
-        <div>
+        <div class="project-links">
           <a href="http://eqtimer.hugesalt.com/" target="_blank">Live Link</a>
           <a href="https://github.com/JustinRoesner/eq_timer/tree/master/eq_timer" target="_blank">GitHub Link</a>
         </div>
+        <div>Technology:</div>
+        <div>React</div>
+        </br>
       </div>
       <!-- project 2 -->
       <div class="project">
         <h3 class="project-name">Fake Product Landing Page</h3>
-        <div>Technology used: </div>
-        <div>CSS and Bootstrap library</div>
-        </br>
-        <div>
+        <div class="project-links">
           <a href="https://justinroesner.github.io/fake-product-site/" target="_blank">Live Link</a>
           <a href="https://github.com/JustinRoesner/fake-product-site" target="_blank">GitHub Link</a>
         </div>
+        <div>Technology:</div>
+        <div>CSS Bootstrap</div>
+        </br>
       </div>
       <!-- project 3 -->
       <div class="project">
         <h3 class="project-name">React Mining Game</h3>
-        <div>Technology used: </div>
-        <div>CSS and Bootstrap library</div>
-        </br>
-        <div>
+        <div class="project-links">
           <a href="https://justinroesner.github.io/fake-product-site/" target="_blank">Live Link</a>
           <a href="https://github.com/JustinRoesner/fake-product-site" target="_blank">GitHub Link</a>
         </div>
+        <div>Technology:</div>
+        <div>CSS Bootstrap</div>
+        </br>
       </div>
     </section>
 
     <!-- contact me  -->
     <section class="section-contact-me">
       <h2 id="contact">Contact Me</h2>
-      <p>815-901-1989</p>
+      <p>Feel free to shoot me a message regarding any job opportunities or general feedback. Thank you!</p>
       <p>JustinRoesner@gmail.com</p>
+      <p>815-901-1989</p>
       <form
         action="https://formspree.io/f/mbjwvzpb"
         method="POST">
