color bullets for skills with responsive grid

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Justin</title>
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/responsive.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
@@ -51,12 +52,37 @@
     <!-- skills -->
     <section>
       <h2 class="skill-section-header">Skills</h2>
-      <div class="skill-box">
-        <img src="./images/skill-js.webp" alt="JavaScript logo" class="skill" id="first-skill" />
-        <img src="./images/skill-html.png" alt="HTML logo" class="skill" />
-        <img src="./images/skill-css.png" alt="CSS logo" class="skill" />
-        <img src="./images/skill-react.webp" alt="React logo" class="skill" />
-      </div>
+        <h3>Languages</h3>
+          <ul class="list language-list">
+          <div class="list-wrapper">
+            <li>JavaScript (ES6)</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>SQL</li>
+            <li>PHP</li>
+          </div>
+          </ul>
+        <h3>Tools</h3>
+        <ul class="list tool-list">
+          <div class="list-wrapper">
+          <li>React</li>
+          <li>Git</li>
+          <li>REST</li>
+          <li>npm</li>
+          <li>Figma</li>
+          <li>Material UI</li>
+          <li>Bootstrap</li>
+          </div>
+        </ul>
+        <h3>Other</h3>
+          <ul class="list other-list">
+          <div class="list-wrapper">
+            <li>TDD</li>
+            <li>Agile Development</li>
+            <li>Documentation</li>
+            <li>Responsive Design</li>
+            </div>
+          </ul>
     </section>
 
     <!-- education -->
@@ -79,9 +105,13 @@
         <div class="project-links">
           <a href="http://eqtimer.hugesalt.com/" target="_blank">Live Link</a>
           <a href="https://github.com/JustinRoesner/eq_timer/tree/master/eq_timer" target="_blank">GitHub Link</a>
+          <div>
+            My goal with this project was to create a website where I could create 
+            many named timers with custom times. I was able to achieve this through 
+            the use of React. The styling was done with Material UI and some CSS.
+          </div>
         </div>
-        <div>Technology:</div>
-        <div>React</div>
+        <div>HTML, CSS, JS, React, Material UI</div>
         </br>
       </div>
       <!-- project 2 -->
@@ -91,8 +121,7 @@
           <a href="https://justinroesner.github.io/fake-product-site/" target="_blank">Live Link</a>
           <a href="https://github.com/JustinRoesner/fake-product-site" target="_blank">GitHub Link</a>
         </div>
-        <div>Technology:</div>
-        <div>CSS Bootstrap</div>
+        <div>HTML, CSS, Bootstrap</div>
         </br>
       </div>
       <!-- project 3 -->
@@ -102,7 +131,6 @@
           <a href="https://justinroesner.github.io/fake-product-site/" target="_blank">Live Link</a>
           <a href="https://github.com/JustinRoesner/fake-product-site" target="_blank">GitHub Link</a>
         </div>
-        <div>Technology:</div>
         <div>CSS Bootstrap</div>
         </br>
       </div>
@@ -111,7 +139,7 @@
     <!-- contact me  -->
     <section class="section-contact-me">
       <h2 id="contact">Contact Me</h2>
-      <p>Feel free to shoot me a message regarding any job opportunities or general feedback. Thank you!</p>
+      <p>Feel free to shoot me a message regarding any job opportunity or general feedback. Thank you!</p>
       <p>JustinRoesner@gmail.com</p>
       <p>815-901-1989</p>
       <form
@@ -125,6 +153,7 @@
       </form>
     </section>
 
+    <!-- footer -->
     <footer>
       <p class="footer">July 2022, Justin Roesner</p>
     </footer>
