--- a/index.html
+++ b/index.html
@@ -100,40 +100,46 @@
     <section>
       <h2>Projects</h2>
       <!-- project 1 -->
-      <div class="project">
-        <h3 class="project-name">React Timer</h3>
-        <div class="project-links">
-          <a href="http://eqtimer.hugesalt.com/" target="_blank">Live Link</a>
-          <a href="https://github.com/JustinRoesner/eq_timer/tree/master/eq_timer" target="_blank">GitHub Link</a>
-          <div>
+      <div class="project project1-color">
+        <h3 class="project-name"><a href="http://eqtimer.hugesalt.com/" target="_blank">React Timer</a></h3>
+        <a href="http://eqtimer.hugesalt.com/"><img class="project-img" src="/images/project-timer.jpg" alt="website screenshot of timer app"></a>
+        <div class="project-text">
+          <p>
             My goal with this project was to create a website where I could create 
             many named timers with custom times. I was able to achieve this through 
-            the use of React. The styling was done with Material UI and some CSS.
-          </div>
+            the use of React, Material UI and CSS.
+          </p>
+          <a href="https://github.com/JustinRoesner/react-timer/" target="_blank">github.com/JustinRoesner/react-timer</a>
+          <div><strong>HTML, CSS, JS, React, Material UI</strong></div>
         </div>
-        <div>HTML, CSS, JS, React, Material UI</div>
         </br>
       </div>
       <!-- project 2 -->
-      <div class="project">
-        <h3 class="project-name">Fake Product Landing Page</h3>
-        <div class="project-links">
-          <a href="https://justinroesner.github.io/fake-product-site/" target="_blank">Live Link</a>
-          <a href="https://github.com/JustinRoesner/fake-product-site" target="_blank">GitHub Link</a>
+      <div class="project project2-color">
+        <h3 class="project-name"><a href="https://justinroesner.github.io/fake-product-site/" target="_blank">Fake Product Landing Page</a></h3>
+        <a href="https://justinroesner.github.io/fake-product-site/"><img class="project-img" src="/images/project-fake.jpg" alt="website screenshot of timer app"></a>
+        <div class="project-text">
+          <p>
+            This project was an exercise in using HTML, CSS and Bootstrap to create a clean looking and responsive product landing page.
+          </p>
+          <a href="https://github.com/JustinRoesner/fake-product-site" target="_blank">github.com/JustinRoesner/fake-product-site</a>
+          <div><strong>HTML, CSS, Bootstrap</strong></div>
         </div>
-        <div>HTML, CSS, Bootstrap</div>
         </br>
       </div>
       <!-- project 3 -->
+
+      <!--*
       <div class="project">
-        <h3 class="project-name">React Mining Game</h3>
+        <h3 class="project-name">WIP</h3>
         <div class="project-links">
-          <a href="https://justinroesner.github.io/fake-product-site/" target="_blank">Live Link</a>
-          <a href="https://github.com/JustinRoesner/fake-product-site" target="_blank">GitHub Link</a>
+          <a href="" target="_blank">Live Link</a>
+          <a href="" target="_blank">GitHub Link</a>
         </div>
-        <div>CSS Bootstrap</div>
+        <div class="technology">WIP</div>
         </br>
       </div>
+      -->
     </section>
 
     <!-- contact me  -->
