tweaked some styles

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Justin</title>
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/responsive.css" />
+    <link rel="stylesheet" href="styles/animation.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
@@ -46,7 +47,7 @@
         technology. My love for learning fulfills me and would make me a good
         member of any team.
       </p>
-      <button class="btn-shadow btn-cv">View CV</button>
+      <a href="https://drive.google.com/file/d/1YDk3WnRSMMLZkuN27WhTH0RAq0aU6Yfl/view?usp=sharing" target="_blank"><button class="btn-shadow btn-cv">View Resume</button></a>
     </section>
 
     <!-- skills -->
@@ -102,7 +103,7 @@
       <!-- project 1 -->
       <div class="project project1-color">
         <h3 class="project-name"><a href="http://eqtimer.hugesalt.com/" target="_blank">React Timer</a></h3>
-        <a href="http://eqtimer.hugesalt.com/"><img class="project-img" src="/images/project-timer.jpg" alt="website screenshot of timer app"></a>
+        <a href="http://eqtimer.hugesalt.com/" target="_blank"><img class="project-img" src="/images/project-timer.jpg" alt="website screenshot of timer app"></a>
         <div class="project-text">
           <p>
             My goal with this project was to create a website where I could create 
@@ -117,7 +118,7 @@
       <!-- project 2 -->
       <div class="project project2-color">
         <h3 class="project-name"><a href="https://justinroesner.github.io/fake-product-site/" target="_blank">Fake Product Landing Page</a></h3>
-        <a href="https://justinroesner.github.io/fake-product-site/"><img class="project-img" src="/images/project-fake.jpg" alt="website screenshot of timer app"></a>
+        <a href="https://justinroesner.github.io/fake-product-site/" target="_blank"><img class="project-img" src="/images/project-fake.jpg" alt="website screenshot of timer app"></a>
         <div class="project-text">
           <p>
             This project was an exercise in using HTML, CSS and Bootstrap to create a clean looking and responsive product landing page.
@@ -128,7 +129,6 @@
         </br>
       </div>
       <!-- project 3 -->
-
       <!--*
       <div class="project">
         <h3 class="project-name">WIP</h3>
@@ -146,7 +146,7 @@
     <section class="section-contact-me">
       <h2 id="contact">Contact Me</h2>
       <p>Feel free to shoot me a message regarding any job opportunity or general feedback. Thank you!</p>
-      <p>JustinRoesner@gmail.com</p>
+      <p><a href="mailto:justinroesner@gmail.com">JustinRoesner@gmail.com</a></p>
       <p>815-901-1989</p>
       <form
         action="https://formspree.io/f/mbjwvzpb"
