--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
         primary skills are JavaScript, HTML, CSS, and React.
       </p>
       <p class="about-text">
-        I am a lifelong learner with a passion for software. My love for
+        I am a lifelong learner with a passion for software. My interest in
         learning fulfills me and I inspire to work with like-minded people.
       </p>
       <a
-        href="https://drive.google.com/file/d/1B7SPafYgrFe8JO09h8AJRJG61kFXHLf3/view?usp=sharing"
+        href="https://drive.google.com/file/d/1KAyP9XbAFYlBRmIDhKoAZPtaKAiiAd1o/view?usp=sharing"
         target="_blank"
         ><button class="btn-shadow btn-cv">View Resume</button></a
       >
@@ -132,8 +132,8 @@
         /></a>
         <div class="project-text">
           <p>
-            This site allows notes to be created and deleted. I made light and
-            dark mode styles with basic SASS. I also took the opportunity to use
+            This site allows notes to be created and deleted. I made a light and
+            dark mode with basic SASS. I also took the opportunity to use
             TypeScript to type my variables.
           </p>
           <a href="https://github.com/JustinRoesner/notes-app/" target="_blank"
