--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         learning fulfills me and I inspire to work with like-minded people.
       </p>
       <a
-        href="https://drive.google.com/file/d/1KAyP9XbAFYlBRmIDhKoAZPtaKAiiAd1o/view?usp=sharing"
+        href="https://drive.google.com/file/d/1Ww0IQXOV9YeHT6cPQgIyyuSyjbvn1BEH/view?usp=sharing"
         target="_blank"
         ><button class="btn-shadow btn-cv">View Resume</button></a
       >
@@ -160,7 +160,7 @@
           <p>
             My goal with this project was to create a website where I could
             create many named timers with custom times. I was able to achieve
-            this through the use of React, Material UI and CSS.
+            this through the use of React, Material UI, and CSS.
           </p>
           <a
             href="https://github.com/JustinRoesner/react-timer/"
@@ -190,8 +190,8 @@
         /></a>
         <div class="project-text">
           <p>
-            This project was an exercise in using HTML, CSS and Bootstrap to
-            create a clean looking and responsive product landing page.
+            This project was an exercise in using HTML, CSS, and Bootstrap to
+            create a clean-looking and responsive product landing page.
           </p>
           <a
             href="https://github.com/JustinRoesner/planets-for-sale/"
