--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta
       name="keywords"
-      content="Portfolio, Developer, Software, HTML, CSS, JS, JavaScript"
+      content="Portfolio, Developer, Software, HTML, CSS, JS, JavaScript, Java"
     />
     <meta name="author" content="Justin Roesner" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -54,14 +54,14 @@
       <h2>About</h2>
       <p class="about-text">
         I'm a recent CS graduate from Illinois seeking a developer position. My
-        primary skills are JavaScript, HTML, CSS, and React.
+        primary skills are JavaScript, HTML, CSS, React, and Java.
       </p>
       <p class="about-text">
         I am a lifelong learner with a passion for software. My interest in
         learning fulfills me and I inspire to work with like-minded people.
       </p>
       <a
-        href="https://drive.google.com/file/d/1Ww0IQXOV9YeHT6cPQgIyyuSyjbvn1BEH/view?usp=sharing"
+        href="https://drive.google.com/file/d/1jDEpbekfbyLo4ayqkGFkvQkKEJDdKLuD/view?usp=sharing"
         target="_blank"
         ><button class="btn-shadow btn-cv">View Resume</button></a
       >
@@ -76,9 +76,8 @@
           <li>JavaScript (ES6)</li>
           <li>HTML</li>
           <li>CSS</li>
-          <li>Python</li>
+          <li>Java</li>
           <li>TypeScript</li>
-          <li>SASS</li>
         </div>
       </ul>
       <h3>Tools</h3>
@@ -90,6 +89,7 @@
           <li>AWS</li>
           <li>Material UI</li>
           <li>Bootstrap</li>
+          <li>SASS</li>
           <li>REST</li>
           <li>Figma</li>
         </div>
