--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </p>
       <p class="about-text">
         I am a lifelong learner with a passion for software. My interest in
-        learning fulfills me and I inspire to work with like-minded people.
+        learning fulfills me and I aspire to work with like-minded people.
       </p>
       <a
         href="https://drive.google.com/file/d/1jDEpbekfbyLo4ayqkGFkvQkKEJDdKLuD/view?usp=sharing"
@@ -89,7 +89,7 @@
           <li>AWS</li>
           <li>Material UI</li>
           <li>Bootstrap</li>
-          <li>SASS</li>
+          <li>Sass</li>
           <li>REST</li>
           <li>Figma</li>
         </div>
@@ -133,13 +133,13 @@
         <div class="project-text">
           <p>
             This site allows notes to be created and deleted. I made a light and
-            dark mode with basic SASS. I also took the opportunity to use
+            dark mode with basic Sass. I also took the opportunity to use
             TypeScript to type my variables.
           </p>
           <a href="https://github.com/JustinRoesner/notes-app/" target="_blank"
             >github.com/JustinRoesner/notes-app</a
           >
-          <div><strong>React, TypeScript, JS, HTML, SASS, CSS</strong></div>
+          <div><strong>React, TypeScript, JS, HTML, Sass, CSS</strong></div>
         </div>
         <br />
       </div>
