Content update, IT

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- intro section -->
     <section>
       <h1>Justin Roesner</h1>
-      <p class="subtitle"><strong>Software Developer</strong></p>
+      <p class="subtitle"><strong>2022 Computer Science Graduate</strong></p>
       <div>
         <!-- nav bar -->
         <ul class="nav-list">
@@ -52,14 +52,43 @@
     <!-- about -->
     <section>
       <h2>About</h2>
-      <p class="about-text">
+      <!-- <p class="about-text">
         I'm a recent CS graduate from Illinois seeking a developer position. My
         primary skills are JavaScript, HTML, CSS, React, and Java.
       </p>
       <p class="about-text">
         I am a lifelong learner with a passion for software. My interest in
         learning fulfills me and I aspire to work with like-minded people.
+      </p> -->
+      <p class="about-text">
+        Computer Science and IT are 
+        the areas of technology that excite me and keep me driven to learn more every day. 
       </p>
+
+      <p class="about-text">
+        Ever since I first saw the inside of a computer as a child and got my hands on 
+        a Gameboy, I've been inspired and drawn toward technology. I love using my diagnostic 
+        skills to solve and mitigate technological issues. These are skills I've cultivated 
+        through my Computer Science Bachelor's degree as well as developing my own personal projects.
+      </p>
+
+      <p class="about-text">
+        Outside of university, I've further developed my front-end skills by creating a 
+        series of personal websites and completing a Udemy Web Development course. Programming
+         with the React library, my websites feel fast and utilize well-designed interfaces.
+          These sites are linked below.
+      </p>
+
+      <p class="about-text">
+        I have also created a virtual home lab to practice and learn IT support skills. Through
+         three instances of VirtualBox, one running Windows Server 2016 and two running Windows 
+         10, I was able to create a domain, modify users through Active Directory, and edit policy.
+      </p>
+
+      <p class="about-text">
+        In my free time, I love drawing and painting, playing old video games with friends, and listening to audiobooks.
+      </p>
+
       <a
         href="https://drive.google.com/file/d/1jDEpbekfbyLo4ayqkGFkvQkKEJDdKLuD/view?usp=sharing"
         target="_blank"
@@ -70,14 +99,24 @@
     <!-- skills -->
     <section>
       <h2 class="skill-section-header">Skills</h2>
+      <h3>IT</h3>
+      <ul class="list it-list">
+        <div class="list-wrapper">
+          <li>Active Directory</li>
+          <li>Windows Server 2016</li>
+          <li>CompTIA A+ (in progress)</li>
+        </div>
+      </ul>
       <h3>Languages</h3>
       <ul class="list language-list">
         <div class="list-wrapper">
           <li>JavaScript (ES6)</li>
           <li>HTML</li>
           <li>CSS</li>
+          <li>Python</li>
           <li>Java</li>
-          <li>TypeScript</li>
+          <li>C++</li>
+          <li>SQL</li>
         </div>
       </ul>
       <h3>Tools</h3>
